@@ -118,6 +118,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * Add an ID if 'missingsummary' is triggered to allow styling of the summary
   line
 * Add logging to password resets if not resetting your own
+* Added $wgUseTagFilter to control enabling of filter-by-change-tag
 
 === Bug fixes in 1.15 ===
 * (bug 16968) Special:Upload no longer throws useless warnings.
